--- a/Relatórios Isensys/.settings/org.eclipse.core.resources.prefs
+++ b/Relatórios Isensys/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//Reports/Edital.jrxml=UTF-8
+encoding//Reports/Retorno.jrxml=UTF-8
 encoding//Reports/Similaridades.jrxml=UTF-8
