Encoding do projeto setado para 'utf8'

--- a/Relatórios Isensys/.settings/org.eclipse.core.resources.prefs
+++ b/Relatórios Isensys/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
-encoding//Reports/Edital.jrxml=UTF-8
-encoding//Reports/Retorno.jrxml=UTF-8
+encoding//Reports/Estatisticas.jrxml=UTF-8
+encoding//Reports/Resultado.jrxml=UTF-8
 encoding//Reports/Similaridades.jrxml=UTF-8
+encoding/<project>=UTF-8
